--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Sitenizde kullanıcı deneyimini arttırıyor ve trafiği yükseltiyoruz.       
     </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Rubicon SEO</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Rubicon SEO</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
